--- a/ch11-proposed.tex
+++ b/ch11-proposed.tex
@@ -353,8 +353,8 @@ for the Darpa Robotics Challenge.
 It is a tracked mobile manipulation robot consisting of
 four limbs comprising 26 limb degrees of freedom.
 It has Robotiq adaptive 3-finger grippers.
-\cdnote{I want to run my planner on the DRC Trials data
-and show significant improvement.}
+%\cdnote{I want to run my planner on the DRC Trials data
+%and show significant improvement.}
 
 \textbf{OpenRAVE Simulation Environment.}
 We use the OpenRAVE \citep{diankov2010openrave} simulation environment
@@ -417,7 +417,7 @@ including:
    based on the Constrained Bi-Directional RRT
    \cite{berenson2009manifolds}.
 \item Other hybrid symbolic/geometric planners.
-   \cdnote{Talk to Evan.}
+   %\cdnote{Talk to Evan.}
 \end{itemize}
 For a fair comparison,
 we also select parameters for other approaches using a set of testing
@@ -428,7 +428,7 @@ problems.
 \section{Timeline}
 
 See Table~\ref{table:proposed-timeline} for the timeline.
-It's currently very aggressive.
+%It's currently very aggressive.
 
 I'm not sure if integration of my OMPL planner
 is in the best interests of the DRC project.
@@ -464,8 +464,8 @@ In any case, I'd like to test against Trials data
 %      & 
 %      & 
 %      & March 2015 (ISRR) \\
-   DRC Integration (presuming project alignment)
-      & & & April-May 2015 \\
+   %DRC Integration (presuming project alignment)
+   %   & & & April-May 2015 \\
    Multi-Set Planning for the DRC
       & \ref{chap:multi-set-prm}, \ref{chap:task-planning}
       & \ref{ques:evalpath}, \ref{ques:how-sequence},
@@ -491,7 +491,9 @@ In any case, I'd like to test against Trials data
    \end{tabular}
    } %arraystretch
    \end{widepage}
-   \caption[][0.2in]{Proposed Timeline. \cdnote{This is quite agressive.}}
+   \caption[][0.2in]{Proposed Timeline.
+      %\cdnote{This is quite agressive.}
+   }
    \label{table:proposed-timeline}
 \end{table*}
 
