--- a/figs/diagram-multi-step.tex
+++ b/figs/diagram-multi-step.tex
@@ -1,4 +1,8 @@
 \documentclass{standalone}
+% fonts
+\usepackage{mathpazo} % math & rm
+\linespread{1.05} % Palatino needs more leading (space between lines)
+% tikz
 \usepackage{tikz}
 \usetikzlibrary{positioning,shapes}
 \begin{document}
