--- a/figs/example-2d-b.tex
+++ b/figs/example-2d-b.tex
@@ -45,7 +45,7 @@
 
 % label
 %\draw[fill=white] (0,1.5) rectangle (0.8,2);
-%\node at (0.4,1.75) {$X_{12}$};
+%\node at (0.4,1.75) {$S_{12}$};
 
 % for vertical spacing
 \node[inner sep=0] at (0,2.1) {};
