--- a/figs/figstar-a.tex
+++ b/figs/figstar-a.tex
@@ -32,8 +32,8 @@
 \end{scope}
 
 \node (clab) at (0.3,4.6) {$\mathcal{C}$};
-\node[fill=white,circle,inner sep=0] (f1lab) at (1.8,3.6) {$X_{12}$};
-\node (f2lab) at (4.0,3.6) {$X_{23}$};
+\node[fill=white,circle,inner sep=0] (f1lab) at (1.8,3.6) {$S_{12}$};
+\node (f2lab) at (4.0,3.6) {$S_{23}$};
 
 \node[circle,fill=black,inner sep=1.5] (p1) at (1.6,2.5) {};
 \node[circle,fill=black,inner sep=1.5] (p2) at (3.3,1.7) {};
