--- a/figs/intro-subprob-cspace.tex
+++ b/figs/intro-subprob-cspace.tex
@@ -15,8 +15,8 @@
 \node[circle,fill=black,inner sep=2] (xd2) at (6.0,-0.7) {};
 \node[circle,fill=black,inner sep=2] (xend) at (9,0) {};
 \node[above=0.1cm of xstart] {$q_{\mbox{\scriptsize start}}$};
-\node[above=0cm of Xgrasp] {$X_{\mbox{\scriptsize grasp}}$};
-\node[above=0cm of Xdrop] {$X_{\mbox{\scriptsize drop}}$};
+\node[above=0cm of Xgrasp] {$S_{\mbox{\scriptsize grasp}}$};
+\node[above=0cm of Xdrop] {$S_{\mbox{\scriptsize drop}}$};
 \node[above=0.1cm of xend] {$q_{\mbox{\scriptsize end}}$};
 
 \draw[line width=1.5mm,white]
@@ -58,15 +58,15 @@
 
 \draw [decorate,decoration={brace,mirror,amplitude=10pt}]
 (0.0,-1.4) -- (2.9,-1.4) node [black,midway,yshift=-0.9cm,align=center]
-   {$X_1$\\(mug on table)};
+   {$S_1$\\(mug on table)};
 
 \draw [decorate,decoration={brace,mirror,amplitude=10pt}]
 (3.1,-1.4) -- (5.9,-1.4) node [black,midway,yshift=-0.9cm,align=center]
-   {$X_2$\\(mug in hand)};
+   {$S_2$\\(mug in hand)};
 
 \draw [decorate,decoration={brace,mirror,amplitude=10pt}]
 (6.1,-1.4) -- (9.0,-1.4) node [black,midway,yshift=-0.9cm,align=center]
-   {$X_3$\\(mug in bin)};
+   {$S_3$\\(mug in bin)};
 
 \end{tikzpicture}%
 \end{document}
