--- a/proposal.tex
+++ b/proposal.tex
@@ -12,7 +12,6 @@
 \usepackage{amssymb} % for \square
 % non-italicized math subscripts
 \newcommand{\ms}[1]{\mbox{\scriptsize #1}}
-
 % from http://tex.stackexchange.com/a/5255
 \DeclareMathOperator*{\argmin}{arg\,min}
 
@@ -86,6 +85,7 @@
    Reuse-Informed Optimization of Planning Effort}
 \author{Christopher M. Dellin}
 \date{\today}
+%\date{March 28, 2015}
 
 \renewcommand{\maketitlehooka}{
 \begin{fullwidth}
@@ -169,7 +169,7 @@ We also present a task planner
 that maps a task decomposition into queries to our motion planner.
 Our insights yield complementary components
 which, taken together,
-consitute an efficient approach to planning manipulation tasks.
+constitute an efficient approach to planning manipulation tasks.
 
 This thesis proposes a heavy emphasis on experimental evaluation
 of the individual constituent algorithms
