--- a/figs/example-2d-c.tex
+++ b/figs/example-2d-c.tex
@@ -41,12 +41,12 @@
    \draw[black,fill=blue!10,dashed,shift={(-0.5,0.0)}]
       (-60:0.3) arc (-60:60:0.3) -- (60:0.5) arc (60:-60:0.5) -- cycle;
    \draw[black,fill=red!10,dashed] (-0.5,0) circle (0.3);
-   \node[fill=white,fill opacity=0.9] at (0.4,0) {$q \in X_{23}$};
+   \node[fill=white,fill opacity=0.9] at (0.4,0) {$q \in S_{23}$};
 \end{scope}
 
 % label
 \draw[fill=white] (0,1.5) rectangle (0.8,2);
-\node at (0.4,1.75) {$X_{23}$};
+\node at (0.4,1.75) {$S_{23}$};
 
 % for vertical spacing
 \node[inner sep=0] at (0,2.1) {};
