--- a/figs/intro-cost-chimp.tex
+++ b/figs/intro-cost-chimp.tex
@@ -1,13 +1,17 @@
 \documentclass{standalone}
+% fonts
+\usepackage{mathpazo} % math & rm
+\linespread{1.05} % Palatino needs more leading (space between lines)
+% tikz
 \usepackage{tikz}
 %\usetikzlibrary{...}
 \begin{document}
 \begin{tikzpicture}
-\node at (0,0) {
+\node[inner sep=0] at (0,0) {
    \includegraphics[height=2in]{figs/chimp-debris-cost.jpg}
 };
 \node[black,fill=white,fill opacity=0.5,text opacity=1]
-   (planlab) at (1.0,2.15) {Planning Effort};
+   (planlab) at (0.9,2.15) {Planning Effort};
 \draw[->,thick] (planlab.south) -- (0.6,0.6);
 \node[black,fill=white,fill opacity=0.5,text opacity=1]
    (execlab) at (-0.9,-2.2) {Execution Effort};
