--- a/figs/intro-cost-herb.tex
+++ b/figs/intro-cost-herb.tex
@@ -1,16 +1,20 @@
 \documentclass{standalone}
+% fonts
+\usepackage{mathpazo} % math & rm
+\linespread{1.05} % Palatino needs more leading (space between lines)
+% tikz
 \usepackage{tikz}
 %\usetikzlibrary{...}
 \begin{document}
 \begin{tikzpicture}
-\node at (0,0) {
+\node[inner sep=0] at (0,0) {
    \includegraphics[height=2in]{figs/herb-fuze-cost.jpg}
 };
 \node[black,fill=white,fill opacity=0.5,text opacity=1]
-   (planlab) at (-0.5,2.15) {Planning Effort};
+   (planlab) at (-0.3,2.15) {Planning Effort};
 \draw[->,thick] (planlab.south) -- (-0.3,-0.1);
 \node[black,fill=white,fill opacity=0.5,text opacity=1]
-   (execlab) at (0.5,-2.2) {Execution Effort};
+   (execlab) at (0.3,-2.2) {Execution Effort};
 \draw[->,thick] (execlab.north) -- (0.6,-1.4);
 \end{tikzpicture}%
 \end{document}
