--- a/figs/self-collision.tex
+++ b/figs/self-collision.tex
@@ -29,7 +29,7 @@
 \node (clab) at (0.3,4.6) {$\mathcal{C}$};
 \node (rlab) at ($ (r) + (-1.4,0) $) {$R$};
 \node (elab) at ($ (e) + ( 1.7,0) $) {$E$};
-\node (flab) at (2.5,3.8) {$X$};
+\node (flab) at (2.5,3.8) {$S$};
 
 \coordinate (v01) at ($ (r) + (-1.20, 0.70) $);
 \coordinate (v02) at ($ (r) + (-1.10,-0.86) $);
@@ -74,8 +74,8 @@
 \draw[color=black,dotted] (v07) -- (p2) -- (v09);
 \draw[color=black,dotted] (p2) -- (v11);
 
-\node (p1lab) at (4.1,3.7) {$x_{start}$};
-\node (p2lab) at (4.0,1.1) {$x_{goal}$};
+\node (p1lab) at (4.1,3.7) {$q_{start}$};
+\node (p2lab) at (4.0,1.1) {$q_{goal}$};
 \draw[->] (p1lab) -- (p1node);
 \draw[->] (p2lab) -- (p2node);
 
